--- a/shop.html
+++ b/shop.html
@@ -40,6 +40,17 @@
                     <li><a href="#">A3</a></li>
                     <li><a href="#">A4</a></li>
                     <li><a href="#">A5</a></li>
+                    <li><a href="#">A3</a></li>
+                    <li><a href="#">A4</a></li>
+                    <li><a href="#">A5</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">Nguyen Huu Nhat</a>
+                <ul class="nav nav1">
+                    <li><a href="#">A3 Nguyen Huu Nhat</a></li>
+                    <li><a href="#">A4</a></li>
+                    <li><a href="#">A5</a></li>
                 </ul>
             </li>
             <li>
