--- a/shop.html
+++ b/shop.html
@@ -299,7 +299,7 @@
             <ul class="f f2">
                 <li><a href="https://www.facebook.com/nguyennhuunhat" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.instagram.com/__nhat_/" target="_blank"><i class="fa fa-instagram"></i></a></li> 
-                <li class="abc"><a href="https://www.facebook.com/messages/" target="_blank"><i class="fa fa-comments"></i></a></li>
+                <li class="abc"><a href="https://www.messenger.com/t/100023973195553" target="_blank"><i class="fa fa-comments"></i></a></li>
             </ul>
         </div>
         <h6>&copy 2020</h6>
